Cleanup integration tests.
- extracts redundant assertion code.
- makes integration test methods be private and static.
- removes all uses of the "assert" statement except for the test "assertSimple" that tests it.
- removes the bridge test generator since it has limited value.

PiperOrigin-RevId: 229242247