@@ -15,6 +15,8 @@
  */
 package com.google.j2cl.transpiler.integration.strictequality;
 
+import static com.google.j2cl.transpiler.utils.Asserts.assertTrue;
+
 public class Main {
   public static void main(String... args) {
     testEqualityIsStrict();
@@ -23,23 +25,24 @@ public class Main {
   }
 
   private static void testBoxedAndDevirtualizedTypes() {
-    assert new Character((char) 1) != new Character((char) 1);
-    assert Character.valueOf((char) 1) == Character.valueOf((char) 1);
+    assertTrue(new Character((char) 1) != new Character((char) 1));
+    assertTrue(Character.valueOf((char) 1) == Character.valueOf((char) 1));
 
-    assert new Byte((byte) 1) != new Byte((byte) 1);
-    assert Byte.valueOf((byte) 1) == Byte.valueOf((byte) 1);
+    assertTrue(new Byte((byte) 1) != new Byte((byte) 1));
+    assertTrue(Byte.valueOf((byte) 1) == Byte.valueOf((byte) 1));
 
-    assert new Integer(1) != new Integer(1);
-    assert Integer.valueOf(1) == Integer.valueOf(1);
+    assertTrue(new Integer(1) != new Integer(1));
+    assertTrue(Integer.valueOf(1) == Integer.valueOf(1));
 
-    // assert new String("asdf") != new String("asdf"); // can't honor, it's native JS string
-    assert String.valueOf("asdf") == String.valueOf("asdf");
+    // assertTrue(new String("asdf") != new String("asdf")); // can't honor, it's native JS string
+    assertTrue(String.valueOf("asdf") == String.valueOf("asdf"));
 
-    // assert new Boolean(true) != new Boolean(true); // can't honor, it's native JS boolean
-    assert Boolean.valueOf(true) == Boolean.valueOf(true);
+    // assertTrue(new Boolean(true) != new Boolean(true)); // can't honor, it's native JS boolean
+    assertTrue(Boolean.valueOf(true) == Boolean.valueOf(true));
 
-    // assert new Double(1) != new Double(1); // can't honor, it's native JS double
-    assert Double.valueOf(1) == Double.valueOf(1); // different from Java, it's native JS double
+    // assertTrue(new Double(1) != new Double(1)); // can't honor, it's native JS double
+    assertTrue(
+        Double.valueOf(1) == Double.valueOf(1)); // different from Java, it's native JS double
   }
 
   private static void testEqualityIsStrict() {
@@ -50,41 +53,41 @@ public class Main {
     Object emptyArray = new Object[] {};
     Object undefined = (new Object[1])[0];
 
-    assert undefined == null;
-    assert undefined == nullObject;
-    assert undefined != boxedBooleanFalse;
-    assert undefined != emptyString;
-    assert undefined != boxedDoubleZero;
-    assert undefined != emptyArray;
+    assertTrue(undefined == null);
+    assertTrue(undefined == nullObject);
+    assertTrue(undefined != boxedBooleanFalse);
+    assertTrue(undefined != emptyString);
+    assertTrue(undefined != boxedDoubleZero);
+    assertTrue(undefined != emptyArray);
 
-    assert null == nullObject;
-    assert null != boxedBooleanFalse;
-    assert null != emptyString;
-    assert null != boxedDoubleZero;
-    assert null != emptyArray;
+    assertTrue(null == nullObject);
+    assertTrue(null != boxedBooleanFalse);
+    assertTrue(null != emptyString);
+    assertTrue(null != boxedDoubleZero);
+    assertTrue(null != emptyArray);
 
-    assert boxedBooleanFalse != nullObject;
-    assert boxedBooleanFalse != emptyString;
-    assert boxedBooleanFalse != boxedDoubleZero;
-    assert boxedBooleanFalse != emptyArray;
+    assertTrue(boxedBooleanFalse != nullObject);
+    assertTrue(boxedBooleanFalse != emptyString);
+    assertTrue(boxedBooleanFalse != boxedDoubleZero);
+    assertTrue(boxedBooleanFalse != emptyArray);
 
-    assert boxedDoubleZero != nullObject;
-    assert boxedDoubleZero != emptyString;
-    assert boxedDoubleZero != emptyArray;
+    assertTrue(boxedDoubleZero != nullObject);
+    assertTrue(boxedDoubleZero != emptyString);
+    assertTrue(boxedDoubleZero != emptyArray);
 
-    assert emptyArray != nullObject;
-    assert emptyArray != emptyString;
+    assertTrue(emptyArray != nullObject);
+    assertTrue(emptyArray != emptyString);
 
-    assert emptyString != nullObject;
+    assertTrue(emptyString != nullObject);
   }
 
   // Make sure String does not end up compared via '==' (b/33850935).
   private static void testEqualityIsStrict_regression() {
     // java.lang.Object.equals should not optimize to '=='
-    assert !new StringBuilder("data").equals("data");
+    assertTrue(!new StringBuilder("data").equals("data"));
 
     // CharSequence comparision should not optimize to '=='
-    assert charSeq1() != charSeq2();
+    assertTrue(charSeq1() != charSeq2());
   }
 
   private static CharSequence charSeq1() {
